[package]
name = "proxypool-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.9"
scraper = "0.17.1"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = {version ="1.18.2",features = ["full"] }
async-trait = "0.1.73"
futures = "0.3"
regex = "1.9.5"
lazy_static = "1.4.0"
# ssl error:  apt install librust-openssl-sys-dev